--- a/Sisu/pom.xml
+++ b/Sisu/pom.xml
@@ -21,6 +21,11 @@
             <version>2.9.0</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.9.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
